Style password change and link to account

--- a/templates/account/password_change.html
+++ b/templates/account/password_change.html
@@ -6,21 +6,40 @@
 
 {% block content %}
 
+{% load crispy_forms_tags %}
+
 <div class="container-fluid d-flex justify-content-center mt-5">
     <div class="row mb-5">
-        <div class="col-md-8 offset-md-2 mb-3">
+        <div class="col-md-8 offset-md-2 col-lg-6 offset-lg-3 mb-3">
             <h1 class="text-center">{% trans "Change Password" %}</h1>
         </div>
-        {% if user.is_authenticated %}
-        {% include "account/snippets/already_logged_in.html" %}
-        {% endif %}
-        <div class="account-form bg-light col-md-8 offset-md-2">
-            <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
-                {% csrf_token %}
-                {{ form.as_p }}
-                <button class="btn signup_button" type="submit" name="action">{% trans "Change Password" %}</button>
-                <a href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
+        <div class="col-md-8 offset-md-2 col-lg-6 offset-lg-3 mb-2">
+            {% if user.is_authenticated %}
+            {% include "account/snippets/already_logged_in.html" %}
+            {% endif %}
+        </div>
+        <div class="account-form bg-light col-md-8 offset-md-2 col-lg-6 offset-lg-3">
+
+            <h4 class="text-center mt-2">
+                {% trans "Forgotten your password?" %}
+            </h4>
+            <p class="text-center">
+                {% trans "Enter your e-mail address below.<br>We'll send you an e-mail allowing you to reset it." %}</p>
+
+            <form method="POST" action="{% url 'account_change_password' %}" class="password_change col-12 col-sm-9 col-md-12 col-lg-9 pb-3">
+                    {% csrf_token %}
+                    {{ form|crispy }}
+                    <button class="btn signup_button col-12" type="submit" name="action">{% trans "Change Password" %}</button>
             </form>
+            <a class="text-center border-bottom border-primary col-12 col-md-9 pb-3" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
+            <h5 class="mt-3 col-lg-9 text-center">
+                {% trans "Please contact us if you have any trouble changing your password." %}
+                <br>
+                reportsreach@gmail.com
+            </h5>
+            <a href="{% url 'home' %}" class="mt-3 m-sm-3 col-9 col-sm-4 btn btn-dark">
+                Back to Home
+            </a>
         </div>
     </div>
 </div>
