--- a/templates/account/password_reset.html
+++ b/templates/account/password_reset.html
@@ -7,7 +7,7 @@
 
 {% block content %}
 
-{%load crispy_forms_tags %}
+{% load crispy_forms_tags %}
 
 <div class="container-fluid d-flex justify-content-center mt-5">
     <div class="row mb-5">
@@ -36,7 +36,7 @@
                 <br>
                 reportsreach@gmail.com
             </h5>
-            <a href="{% url 'home' %}" class="m-sm-3 col-12 btn">
+            <a href="{% url 'home' %}" class="mt-3 m-sm-3 col-9 col-sm-4 btn btn-dark">
                 Back to Home
             </a>
         </div>
