--- a/templates/account/email.html
+++ b/templates/account/email.html
@@ -1,74 +1,95 @@
-{% extends "account/base.html" %}
+{% extends "base.html" %}
 
 {% load i18n %}
 
 {% block head_title %}{% trans "E-mail Addresses" %}{% endblock %}
 
+{% load crispy_forms_tags %}
+
 {% block content %}
-    <h1>{% trans "E-mail Addresses" %}</h1>
-{% if user.emailaddress_set.all %}
-<p>{% trans 'The following e-mail addresses are associated with your account:' %}</p>
 
-<form action="{% url 'account_email' %}" class="email_list" method="post">
-{% csrf_token %}
-<fieldset class="blockLabels">
-
-  {% for emailaddress in user.emailaddress_set.all %}
-<div class="ctrlHolder">
-      <label for="email_radio_{{forloop.counter}}" class="{% if emailaddress.primary %}primary_email{%endif%}">
-
-      <input id="email_radio_{{forloop.counter}}" type="radio" name="email" {% if emailaddress.primary or user.emailaddress_set.count == 1 %}checked="checked"{%endif %} value="{{emailaddress.email}}"/>
-
-{{ emailaddress.email }}
-    {% if emailaddress.verified %}
-    <span class="verified">{% trans "Verified" %}</span>
-    {% else %}
-    <span class="unverified">{% trans "Unverified" %}</span>
-    {% endif %}
-      {% if emailaddress.primary %}<span class="primary">{% trans "Primary" %}</span>{% endif %}
-</label>
+<div class="container-fluid d-flex justify-content-center mt-5">
+    <div class="row mb-5">
+        <div class="col-md-8 offset-md-2 mb-3">
+            <h1 class="text-center">{% trans "E-mail Addresses" %}</h1>
+        </div>
+        <div class="account-form bg-light col-md-8 offset-md-2">
+            {% if user.emailaddress_set.all %}
+            <h4 class="text-center">{% trans 'The following e-mail addresses are associated with your account:' %}</h4>
+            <h5 class="text-center mt-2">
+                Edit account details for <strong>{{ user.username }}</strong>
+            </h5>
+            <form class="d-sm-flex justify-content-sm-center col-12 p-3" action="{% url 'account_email' %}"
+                class="email_list" method="post">
+                {% csrf_token %}
+                <fieldset class="blockLabels">
+                    {% for emailaddress in user.emailaddress_set.all %}
+                    <div class="form-check">
+                        <input class="form-check-input" type="radio" name="email"
+                            {% if emailaddress.primary or user.emailaddress_set.count == 1 %}checked="checked"
+                            {%endif %} value="{{emailaddress.email}}" id="email_radio_{{forloop.counter}}">
+                        <label class="form-check-label {% if emailaddress.primary %}primary_email{%endif%} col-12"
+                            for="email_radio_{{forloop.counter}}">
+                            {{ emailaddress.email }}
+                            <div class="email-status d-sm-inline float-sm-end">
+                                {% if emailaddress.primary %}
+                                <span class="primary"><i class="fa-solid fa-circle-check text-primary"></i></span>
+                                {% endif %}
+                                {% if emailaddress.verified %}
+                                <span class="verified text-end">{% trans "Verified" %}</span>
+                                {% else %}
+                                <span class="unverified">{% trans "Unverified" %}</span>
+                                {% endif %}
+                            </div>
+                        </label>
+                    </div>
+                    {% endfor %}
+                    <div class="buttonHolder text-center">
+                        <button class="btn btn-none text-primary secondaryAction" type="submit"
+                            name="action_primary">{% trans 'Make Primary' %}</button>
+                        <button class="btn btn-none text-success secondaryAction" type="submit"
+                            name="action_send">{% trans 'Re-send Verification' %}</button>
+                        <button class="btn btn-none text-danger primaryAction" type="submit"
+                            name="action_remove">{% trans 'Remove' %}</button>
+                    </div>
+                </fieldset>
+            </form>
+            {% else %}
+            <p>
+                <strong>{% trans 'Warning:'%}</strong>
+                {% trans "You currently do not have any e-mail address set up. You should really add an e-mail address so you can receive notifications, reset your password, etc." %}
+            </p>
+            {% endif %}
+            {% if can_add_email %}
+            <h2>{% trans "Add E-mail Address" %}</h2>
+            <form method="post" action="{% url 'account_email' %}"
+                class="add_email d-sm-flex flex-column col-12 col-sm-9 p-3">
+                {% csrf_token %}
+                {{ form|crispy }}
+                <button class="btn signup_button col-12" name="action_add" type="submit">{% trans "Add E-mail" %}</button>
+            </form>
+            {% endif %}
+            <a href="{% url 'account' %}" class="m-3 col-9 col-sm-6 col-lg-4 btn btn-outline-dark">
+                Back to account
+            </a>
+        </div>
+    </div>
 </div>
-  {% endfor %}
-
-<div class="buttonHolder">
-      <button class="secondaryAction" type="submit" name="action_primary" >{% trans 'Make Primary' %}</button>
-      <button class="secondaryAction" type="submit" name="action_send" >{% trans 'Re-send Verification' %}</button>
-      <button class="primaryAction" type="submit" name="action_remove" >{% trans 'Remove' %}</button>
-</div>
-
-</fieldset>
-</form>
-
-{% else %}
-<p><strong>{% trans 'Warning:'%}</strong> {% trans "You currently do not have any e-mail address set up. You should really add an e-mail address so you can receive notifications, reset your password, etc." %}</p>
-
-{% endif %}
-
-  {% if can_add_email %}
-    <h2>{% trans "Add E-mail Address" %}</h2>
-
-    <form method="post" action="{% url 'account_email' %}" class="add_email">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button name="action_add" type="submit">{% trans "Add E-mail" %}</button>
-    </form>
-  {% endif %}
 
 {% endblock %}
 
-
 {% block extra_body %}
 <script type="text/javascript">
-(function() {
-  var message = "{% trans 'Do you really want to remove the selected e-mail address?' %}";
-  var actions = document.getElementsByName('action_remove');
-  if (actions.length) {
-    actions[0].addEventListener("click", function(e) {
-      if (! confirm(message)) {
-        e.preventDefault();
-      }
-    });
-  }
-})();
+    (function () {
+        var message = "{% trans 'Do you really want to remove the selected e-mail address?' %}";
+        var actions = document.getElementsByName('action_remove');
+        if (actions.length) {
+            actions[0].addEventListener("click", function (e) {
+                if (!confirm(message)) {
+                    e.preventDefault();
+                }
+            });
+        }
+    })();
 </script>
 {% endblock %}
