--- a/templates/account/email_confirm.html
+++ b/templates/account/email_confirm.html
@@ -1,31 +1,51 @@
-{% extends "account/base.html" %}
+{% extends "base.html" %}
 
 {% load i18n %}
 {% load account %}
 
 {% block head_title %}{% trans "Confirm E-mail Address" %}{% endblock %}
 
+{% load crispy_forms_tags %}
 
 {% block content %}
-<h1>{% trans "Confirm E-mail Address" %}</h1>
 
-{% if confirmation %}
+<div class="container-fluid d-flex justify-content-center mt-5">
+    <div class="row mb-5">
+        <div class="col-md-8 offset-md-2 col-lg-6 offset-lg-3 mb-3">
+            <h1>{% trans "Confirm E-mail Address" %}</h1>
+        </div>
+        <div class="account-form bg-light col-md-8 offset-md-2 col-lg-6 offset-lg-3">
+            {% if confirmation %}
+            {% user_display confirmation.email_address.user as user_display %}
+            <h4 class="text-center mt-2">
+                {% trans "Check Details" %}
+            </h4>
+            <p>
+                {% blocktrans with confirmation.email_address.email as email %}Please confirm that <strong><a
+                        href="mailto:{{ email }}">{{ email }}</a></strong> is an e-mail address for
+                user <strong>{{ user_display }}.{% endblocktrans %}</strong>
 
-{% user_display confirmation.email_address.user as user_display %}
-
-<p>{% blocktrans with confirmation.email_address.email as email %}Please confirm that <a href="mailto:{{ email }}">{{ email }}</a> is an e-mail address for user {{ user_display }}.{% endblocktrans %}</p>
-
-<form method="post" action="{% url 'account_confirm_email' confirmation.key %}">
-{% csrf_token %}
-    <button type="submit">{% trans 'Confirm' %}</button>
-</form>
-
-{% else %}
-
-{% url 'account_email' as email_url %}
-
-<p>{% blocktrans %}This e-mail confirmation link expired or is invalid. Please <a href="{{ email_url }}">issue a new e-mail confirmation request</a>.{% endblocktrans %}</p>
-
-{% endif %}
+            </p>
+            <form class="col-12 col-sm-6" method="post" action="{% url 'account_confirm_email' confirmation.key %}">
+                {% csrf_token %}
+                <button class="btn signup_button col-12 mb-3" type="submit">{% trans 'Confirm' %}</button>
+            </form>
+            {% else %}
+            {% url 'account_email' as email_url %}
+            <p>
+                {% blocktrans %}This e-mail confirmation link expired or is invalid. Please <a
+                    href="{{ email_url }}">issue a new
+                    e-mail confirmation request</a>.{% endblocktrans %}
+            </p>
+            {% endif %}
+            <h5 class="col-lg-9 text-sm-center">
+                reportsreach@gmail.com
+            </h5>
+            <a href="{% url 'home' %}" class="mt-3 m-sm-3 col-9 col-sm-4 btn btn-dark">
+                Back to Home
+            </a>
+        </div>
+    </div>
+</div>
 
 {% endblock %}
