--- a/templates/account/verification_sent.html
+++ b/templates/account/verification_sent.html
@@ -1,12 +1,32 @@
-{% extends "account/base.html" %}
+{% extends "base.html" %}
 
 {% load i18n %}
 
 {% block head_title %}{% trans "Verify Your E-mail Address" %}{% endblock %}
 
 {% block content %}
-    <h1>{% trans "Verify Your E-mail Address" %}</h1>
 
-    <p>{% blocktrans %}We have sent an e-mail to you for verification. Follow the link provided to finalize the signup process. If you do not see the verification e-mail in your main inbox, check your spam folder. Please contact us if you do not receive the verification e-mail within a few minutes.{% endblocktrans %}</p>
+<div class="container-fluid d-flex justify-content-center mt-5">
+    <div class="row mb-5">
+        <div class="col-md-8 offset-md-2 col-lg-6 offset-lg-3 mb-3">
+            <h1>{% trans "Verify Your E-mail Address" %}</h1>
+        </div>
+        <div class="account-form bg-light col-md-8 offset-md-2 col-lg-6 offset-lg-3">
+            {% blocktrans %}
+            <h5>We have sent a verification email to you.</h5>
+            <p class="text-sm-center">
+                Follow the link provided to finish the account signup process. If you do not see the verification e-mail in your main inbox, check your spam folder.
+                <br>
+                Please contact us if you do not receive the verification e-mail within a few minutes.{% endblocktrans %}
+            </p>
+            <h5 class="col-lg-9 text-sm-center">
+                reportsreach@gmail.com
+            </h5>
+            <a href="{% url 'home' %}" class="mt-3 m-sm-3 col-9 col-sm-4 btn btn-dark">
+                Back to Home
+            </a>
+        </div>
+    </div>
+</div>
 
 {% endblock %}
