Update email management style

--- a/templates/account/email.html
+++ b/templates/account/email.html
@@ -11,7 +11,7 @@
 <div class="container-fluid d-flex justify-content-center mt-5">
     <div class="row mb-5">
         <div class="col-md-8 offset-md-2 mb-3">
-            <h1 class="text-center">{% trans "E-mail Addresses" %}</h1>
+            <h1 class="text-center">{% trans "E-mail Management" %}</h1>
         </div>
         <div class="account-form bg-light col-md-8 offset-md-2">
             {% if user.emailaddress_set.all %}
