Update account inactive style

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -415,6 +415,10 @@ label {
             display: inline;
             float: right;
         }
+    
+        #inactive-account h5 {
+            font-size: 1.1em;
+        }
 
 }
 
