--- a/templates/account/account_inactive.html
+++ b/templates/account/account_inactive.html
@@ -1,11 +1,28 @@
-{% extends "account/base.html" %}
+{% extends "base.html" %}
 
 {% load i18n %}
 
 {% block head_title %}{% trans "Account Inactive" %}{% endblock %}
 
 {% block content %}
-<h1>{% trans "Account Inactive" %}</h1>
 
-<p>{% trans "This account is inactive." %}</p>
+<div class="container-fluid d-flex justify-content-center mt-5">
+    <div class="row mb-5">
+        <div class="col-md-8 offset-md-2 mb-3">
+            <h1 class="text-center">{% trans "Account Inactive" %}</h1>
+        </div>
+        <div id="inactive-account" class="account-form bg-light col-md-8 offset-md-2">
+            <h4 class="text-center mt-2">
+                <p>{% trans "This account is inactive." %}</p>
+            </h4>
+            <p>Please check your email for instructions or contact us at:</p>
+            <h5><i class="fa-solid fa-envelope"></i> reportsreach@gmail.com</h5>
+            <a href="{% url 'home' %}" class="mt-3 m-sm-3 col-9 col-sm-4 btn btn-dark">
+                Back to Home
+            </a>
+        </div>
+    </div>
+</div>
+
+
 {% endblock %}
