--- a/templates/update_account.html
+++ b/templates/update_account.html
@@ -16,11 +16,14 @@
             <h4 class="text-center mt-2">
                 Edit account details for {{ user.username }}.
             </h4>
-            <form class="login col-12 col-lg-6 border-bottom border-primary pb-3" method="POST" action="{% url 'account_login' %}">
+            <form class="login col-12 col-lg-6 border-bottom border-primary pb-3" method="POST" action="{% url 'update_account' %}">
                 {% csrf_token %}
                 {{ form|crispy }}
                 <button class="primaryAction btn signup_button col-12" type="submit">Update</button>
             </form>
+            <!-- <a href="{% url 'account_email' %}" class="mt-3 col-9 col-sm-6 col-lg-4 btn btn-outline-dark">
+                Manage Email Accounts
+            </a> -->
             <a href="{% url 'account_change_password' %}" class="m-3 col-9 col-sm-6 col-lg-4 btn btn-outline-dark">
                 Change Account Password
             </a>
