--- a/templates/update_account.html
+++ b/templates/update_account.html
@@ -21,9 +21,9 @@
                 {{ form|crispy }}
                 <button class="primaryAction btn signup_button col-12" type="submit">Update</button>
             </form>
-            <!-- <a href="{% url 'account_email' %}" class="mt-3 col-9 col-sm-6 col-lg-4 btn btn-outline-dark">
+            <a href="{% url 'account_email' %}" class="mt-3 col-9 col-sm-6 col-lg-4 btn btn-outline-dark">
                 Manage Email Accounts
-            </a> -->
+            </a>
             <a href="{% url 'account_change_password' %}" class="m-3 col-9 col-sm-6 col-lg-4 btn btn-outline-dark">
                 Change Account Password
             </a>
