--- a/templates/account/email.html
+++ b/templates/account/email.html
@@ -11,7 +11,7 @@
 <div class="container-fluid d-flex justify-content-center mt-5">
     <div class="row mb-5">
         <div class="col-md-8 offset-md-2 mb-3">
-            <h1 class="text-center">{% trans "E-mail Management" %}</h1>
+            <h1 class="text-center">{% trans "E-mail Account Management" %}</h1>
         </div>
         <div class="account-form bg-light col-md-8 offset-md-2">
             {% if user.emailaddress_set.all %}
@@ -19,17 +19,22 @@
             <h5 class="text-center mt-2">
                 Edit account details for <strong>{{ user.username }}</strong>
             </h5>
-            <form class="d-sm-flex justify-content-sm-center col-12 p-3" action="{% url 'account_email' %}"
-                class="email_list" method="post">
+            <form class="email_list d-sm-flex justify-content-sm-center col-12 p-3" action="{% url 'account_email' %}"
+                method="post">
                 {% csrf_token %}
+
                 <fieldset class="blockLabels">
+
                     {% for emailaddress in user.emailaddress_set.all %}
-                    <div class="form-check">
-                        <input class="form-check-input" type="radio" name="email"
-                            {% if emailaddress.primary or user.emailaddress_set.count == 1 %}checked="checked"
-                            {%endif %} value="{{emailaddress.email}}" id="email_radio_{{forloop.counter}}">
-                        <label class="form-check-label {% if emailaddress.primary %}primary_email{%endif%} col-12"
+
+                    <div class="ctrlHolder pb-2">
+                        <label class="{% if emailaddress.primary %}primary_email{%endif%} form-check-holder col-12"
                             for="email_radio_{{forloop.counter}}">
+
+                            <input class="form-check-input" type="radio" name="email"
+                                {% if emailaddress.primary or user.emailaddress_set.count == 1 %}checked="checked"
+                                {%endif %} value="{{emailaddress.email}}" id="email_radio_{{forloop.counter}}">
+
                             {{ emailaddress.email }}
                             <div class="email-status d-sm-inline float-sm-end">
                                 {% if emailaddress.primary %}
@@ -45,12 +50,12 @@
                     </div>
                     {% endfor %}
                     <div class="buttonHolder text-center">
-                        <button class="btn btn-none text-primary secondaryAction" type="submit"
+                        <button class="secondaryAction border-end btn btn-none text-primary" type="submit"
                             name="action_primary">{% trans 'Make Primary' %}</button>
-                        <button class="btn btn-none text-success secondaryAction" type="submit"
+                        <button class="secondaryAction border-end btn btn-none text-success" type="submit"
                             name="action_send">{% trans 'Re-send Verification' %}</button>
-                        <button class="btn btn-none text-danger primaryAction" type="submit"
-                            name="action_remove">{% trans 'Remove' %}</button>
+                        <button class="primaryAction btn btn-none text-danger" type="submit"
+                            name="action_remove" >{% trans 'Remove' %}</button>
                     </div>
                 </fieldset>
             </form>
@@ -66,7 +71,8 @@
                 class="add_email d-sm-flex flex-column col-12 col-sm-9 p-3">
                 {% csrf_token %}
                 {{ form|crispy }}
-                <button class="btn signup_button col-12" name="action_add" type="submit">{% trans "Add E-mail" %}</button>
+                <button class="btn signup_button col-8 offset-2" name="action_add"
+                    type="submit">{% trans "Add email" %}</button>
             </form>
             {% endif %}
             <a href="{% url 'account' %}" class="m-3 col-9 col-sm-6 col-lg-4 btn btn-outline-dark">
@@ -76,9 +82,6 @@
     </div>
 </div>
 
-{% endblock %}
-
-{% block extra_body %}
 <script type="text/javascript">
     (function () {
         var message = "{% trans 'Do you really want to remove the selected e-mail address?' %}";
