--- a/templates/update_account.html
+++ b/templates/update_account.html
@@ -16,17 +16,21 @@
             <h4 class="text-center mt-2">
                 Edit account details for {{ user.username }}.
             </h4>
-            <form class="login col-12 col-sm-9 border-bottom border-primary pb-3" method="POST" action="{% url 'update_account' %}">
+            <form class="login d-sm-flex flex-column align-items-center col-12 col-sm-9 border-bottom border-primary pb-3" method="POST" action="{% url 'update_account' %}">
                 {% csrf_token %}
                 {{ form|crispy }}
-                <button class="primaryAction btn signup_button col-12" type="submit">Update</button>
+                <button class="primaryAction btn signup_button col-6" type="submit">Update Username</button>
             </form>
-            <a href="{% url 'account_email' %}" class="mt-3 col-9 col-sm-6 col-lg-4 btn btn-outline-dark">
-                Manage Email Accounts
-            </a>
-            <a href="{% url 'account_change_password' %}" class="m-3 col-9 col-sm-6 col-lg-4 btn btn-outline-dark">
-                Change Account Password
-            </a>
+            <h4 class="text-center mt-3">Account Management</h4>
+            <div class="col-12 d-sm-flex justify-content-center">
+                <a href="{% url 'account_email' %}" class="m-2 col-9 col-sm-6 col-lg-4 btn btn-outline-dark">
+                    Manage Email Accounts
+                </a>
+                <a href="{% url 'account_change_password' %}" class="m-2 col-9 col-sm-6 col-lg-4 btn btn-outline-dark">
+                    Change Account Password
+                </a>
+            </div>
+            
         </div>
     </div>
 </div>
