update utton styles

--- a/templates/account/email.html
+++ b/templates/account/email.html
@@ -82,9 +82,9 @@
     </div>
 </div>
 
-<script type="text/javascript">
+<script>
     (function () {
-        var message = "{% trans 'Do you really want to remove the selected e-mail address?' %}";
+        var message = "Do you really want to remove the selected e-mail address?";
         var actions = document.getElementsByName('action_remove');
         if (actions.length) {
             actions[0].addEventListener("click", function (e) {
@@ -93,6 +93,6 @@
                 }
             });
         }
-    })();
+})();
 </script>
 {% endblock %}
