--- a/templates/base.html
+++ b/templates/base.html
@@ -87,7 +87,7 @@
                         <a class="nav-link" href="{% url 'account_login' %}">Login</a>
                     </li>
                     <li class="nav-item">
-                        <a href="{% url 'account_signup' %}" class="signup_button btn nav-link text-dark">Signup</a>
+                        <a href="{% url 'account_signup' %}" class="signup_button btn nav-link">Signup</a>
                     </li>
                     {% endif %}
                 </ul>
