--- a/templates/report_details.html
+++ b/templates/report_details.html
@@ -190,6 +190,7 @@
         </div>
     </div>
     {% for comment in comments %}
+    {% if comment.approved %}
     <div class="row col-12 col-sm-9 col-xl-7 justify-content-center">
         <div class="card mt-2 bg-light">
             <div class="row g-0">
@@ -238,6 +239,7 @@
             </div>
         </div>
     </div>
+    {% endif %}
     {% endfor %}
     {% if user.is_authenticated %}
     <div class="row col-12 col-sm-9 col-xl-7 p-0 mt-2">
