--- a/static/css/style.css
+++ b/static/css/style.css
@@ -72,15 +72,16 @@ a:hover {
 }
 
 .signup_button {
-    background-color: whitesmoke;
-    border: 2px solid #2596be;
+    background-color: #2596be;
+    border: 2px solid black;
+    color: black;
     padding: 5px;
 }
 
 .signup_button:hover {
-    background-color: #2596be;
-    color: #ffffff;
+    background-color: #4c83ae;
     border: 2px solid black;
+    color: #ffffff;
     transition: 0.3s;
 }
 
@@ -136,12 +137,13 @@ a:hover {
 
 #reports-btn {
     border: 2px solid black;
-    background-color: #2595be;
+    background-color: #9badbe;
     color: black;
 }
 
 #reports-btn:hover {
-    background-color: #2595be72;
+    background-color: #6c7986;
+    color: white;
 }
 
 /* Footer */
