--- a/static/css/style.css
+++ b/static/css/style.css
@@ -72,15 +72,12 @@ a:hover {
 }
 
 .signup_button {
-    background-color: #2596be;
-    border: 2px solid black;
-    color: black;
+    border: 2px solid #2b5876;
     padding: 5px;
 }
 
 .signup_button:hover {
-    background-color: #4c83ae;
-    border: 2px solid black;
+    background-color: #2b5876;
     color: #ffffff;
     transition: 0.3s;
 }
@@ -90,7 +87,7 @@ a:hover {
 }
 
 .nav-item a {
-    font-size: 1.1em;
+    font-size: 1.2em;
     color: black;
 }
 
@@ -134,18 +131,23 @@ a:hover {
 #head-btns a {
     font-weight: 600;
 }
-
-#reports-btn {
-    border: 2px solid black;
-    background-color: #9badbe;
-    color: black;
+        
+.signup-main {
+    background-color: rgb(69, 129, 168);
+    text-align: center;
+    transition: 0.5s;
+    background-size: 200% auto;
+    color: whitesmoke;
+    border: 1px solid black;
+    border-radius: 5px;
 }
 
-#reports-btn:hover {
-    background-color: #6c7986;
-    color: white;
+.signup-main:hover {
+    background-color: #205577;
+    color: whitesmoke;
+    border: 1px solid black;
 }
-
+ 
 /* Footer */
 
 footer {
