--- a/templates/account.html
+++ b/templates/account.html
@@ -33,12 +33,12 @@
             </h4>
             {% endwith %}
             <div class="col-12 text-center m-2">
-                <a href="{% url 'update_account' %}" class="text-primary">Edit Account</a>
-                <a href="#" class="text-danger ms-1" data-bs-toggle="modal" data-bs-target="#deleteAccountModal">Delete
+                <a href="{% url 'update_account' %}" class="btn btn-outline-primary btn-small">Edit Account</a>
+                <a href="#" class="btn btn-outline-danger btn-small ms-1" data-bs-toggle="modal" data-bs-target="#deleteAccountModal">Delete
                     Account</a>
             </div>
             {% if user.is_staff or user.is_superuser %}
-            <a class="btn btn-dark text-light" href="{% url 'admin:index' %}">
+            <a class="btn btn-dark btn-small" href="{% url 'admin:index' %}">
                 <i class="fa-solid fa-gears"></i> Admin Site
             </a>
             {% endif %}
