Add load static

--- a/templates/account.html
+++ b/templates/account.html
@@ -2,6 +2,8 @@
 
 {% block content %}
 
+{% load static %}
+
 {% load custom_tags %}
 
 <div class="container-fluid d-flex justify-content-center mt-5 mb-5">
