Add novalidate to forms

--- a/templates/create_report.html
+++ b/templates/create_report.html
@@ -24,7 +24,7 @@
 </div>
 <div class="container-fluid d-flex justify-content-center p-0 pb-3 p-sm-3">
     <div class="row col-12 col-md-9 col-lg-6 bg-light rounded pt-2 p-sm-3 mb-3">
-        <form id="create_form" class="text-start pb-3" method="post" enctype="multipart/form-data">
+        <form id="create_form" class="text-start pb-3" method="post" enctype="multipart/form-data" novalidate>
             {% csrf_token %}
             <div class="row col-12 justify-content-center justify-content-sm-start g-2">
                 <div class="col-12 col-md-8">
