--- a/templates/edit_report.html
+++ b/templates/edit_report.html
@@ -26,7 +26,7 @@
 <div class="container-fluid d-flex justify-content-center p-0 pb-3 p-sm-3">
     <div class="row col-12 col-md-9 col-lg-6 bg-light rounded pt-2 p-sm-3 mb-3">
 
-        <form method="POST" class="text-start pb-3" action="" enctype="multipart/form-data" id="edit-report-form">
+        <form method="POST" class="text-start pb-3" action="" enctype="multipart/form-data" id="edit-report-form" novalidate>
             {% csrf_token %}
             <div class="row col-12 justify-content-center justify-content-sm-start g-2">
                 <div class="col-12 col-sm-8">
