--- a/templates/create_report.html
+++ b/templates/create_report.html
@@ -64,7 +64,7 @@
                     <label for="upload"><i class="fa-solid fa-camera"></i> Upload Images: <span class="text-danger">Max
                             Total 12</span></label>
                     <br>
-                    <input class="btn button" id="upload" type="file" name="images" multiple>
+                    <input class="form-control mt-2" id="upload" type="file" name="images" multiple>
                 </div>
                 <div class="col-12 col-sm-6">
                     <label class="pb-2" for="{{ report_form.gps_map_link.id_for_label }}">
