--- a/templates/account/email.html
+++ b/templates/account/email.html
@@ -71,7 +71,7 @@
                 class="add_email d-sm-flex flex-column col-12 col-sm-9 p-3">
                 {% csrf_token %}
                 {{ form|crispy }}
-                <button class="btn signup_button col-8 offset-2" name="action_add"
+                <button class="btn btn-success col-8 offset-2" name="action_add"
                     type="submit">{% trans "Add email" %}</button>
             </form>
             {% endif %}
