--- a/templates/index.html
+++ b/templates/index.html
@@ -21,13 +21,13 @@
     </div>
 
     <div id="head-btns"
-        class="col-10 col-sm-8 col-md-6 col-xl-4 position-absolute translate-middle d-sm-flex flex-column align-items-center">
-        <a href="{% url 'reports' %}" class="col-12 btn btn-light border border-dark mb-2">Condition
+        class="col-10 col-sm-9 col-xl-7 col-xl-3 position-absolute translate-middle d-sm-flex flex-column align-items-center">
+        <a href="{% url 'reports' %}" class="col-12 col-sm-9 btn btn-light border border-dark mb-2">Condition
             Reports</a>
         {% if user.is_authenticated %}
-        <a href="{% url 'create_report' %}" class="col-12 btn btn-success border border-dark">Create New Report</a>
+        <a href="{% url 'create_report' %}" class="col-12 col-sm-9 btn btn-success border border-dark">Create New Report</a>
         {% else %}
-        <a href="{% url 'account_signup' %}" class="signup-main col-12 btn">Sign-Up</a>
+        <a href="{% url 'account_signup' %}" class="signup-main col-12 col-sm-9 btn">Signup</a>
         {% endif %}
     </div>
 </div>
