Update brand and no image, images

--- a/templates/reports.html
+++ b/templates/reports.html
@@ -79,7 +79,7 @@
     </div>
 
     <!-- Reports Objects -->
-    <div class="row">
+    <div class="row mb-3">
 
         {% for report in report_list %}
         <a href="{% url 'report_details' report.pk  %}" class="report-list-item d-flex justify-content-evenly p-1 btn btn-light mb-2">
