--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,6 +2,11 @@
 
 /* Utils */
 
+/* body {
+    position: relative;
+    min-height: 100vh;
+} */
+
 h1 {
     font-family: 'Poppins', sans-serif;
     font-weight: 600;
@@ -43,7 +48,7 @@ a {
 }
 
 a:hover {
-    color: #2f8eb1f8;
+    color: #40cdff;
 }
 
 .content-wrapper {
