Add icons for better UI

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -319,10 +319,11 @@ label {
 
 /* Create Report Form */
 
-#upload {
+.upload {
     padding: 6px;
     background-color: white;
     border: 1px solid #dfdede;
+    margin-top: 2.5px;
 }
 
 .errorlist {
