--- a/templates/base.html
+++ b/templates/base.html
@@ -95,7 +95,7 @@
         </div>
     </nav>
 
-    <main class="content-wrapper">
+    <main>
         {% block content %}
         <!-- Content -->
         {% endblock content %}
