--- a/templates/account.html
+++ b/templates/account.html
@@ -36,7 +36,8 @@
             {% endwith %}
             <div class="col-12 text-center m-2">
                 <a href="{% url 'update_account' %}" class="btn btn-outline-primary btn-small">Edit Account</a>
-                <a href="#" class="btn btn-outline-danger btn-small ms-1" data-bs-toggle="modal" data-bs-target="#deleteAccountModal">Delete
+                <a href="#" class="btn btn-outline-danger btn-small ms-1" data-bs-toggle="modal"
+                    data-bs-target="#deleteAccountModal">Delete
                     Account</a>
             </div>
             {% if user.is_staff or user.is_superuser %}
@@ -94,19 +95,25 @@
 <!-- Reports -->
 
 <div class="container-fluid col-12 col-md-9 mb-4">
-    <div class="row flex-column-reverse flex-md-row pb-2">
-        <div class="col-md-8 p-0">
-            <h2 class="ps-2 p-md-0 m-0 mb-md-2">Your Reports:</h2>
+    <div class="row flex-column-reverse flex-md-row pb-2 m-2 border-bottom border-3">
+        <div class="col-md-8 d-flex justify-content-between align-items-end p-0">
+            <div class="p-0">
+                <h2 class="p-md-0 m-0 mb-md-2">Your Reports:</h2>
+            </div>
+            <p class="sort d-block d-md-none m-0 text-secondary"><span class="d-none d-sm-inline">Sorted By:
+                </span>Activity Date <i class="fa-solid fa-sort-down"></i></p>
         </div>
-        <div class="col-md-4 col-md-4 p-2 p-md-0 mb-2">
+        <div class="col-md-4 col-md-4 p-0 mb-2">
             <a href="{% url 'create_report' %}" class="btn btn-success w-100">
                 Create New Report
             </a>
         </div>
+        <p class="sort d-none d-md-block p-0 m-0 text-secondary text-end">Sorted By: Activity Date <i
+                class="fa-solid fa-sort-down"></i></p>
     </div>
 
     <!-- List Key -->
-    <div class="list-key row justify-content-between justify-content-sm-evenly text-center text-muted p-0 m-0">
+    <div class="list-key row justify-content-between justify-content-sm-evenly text-center text-muted pt-3 m-0">
         <div class="camera col-2">
             <i class="fa-solid fa-camera"></i>
         </div>
