--- a/templates/reports.html
+++ b/templates/reports.html
@@ -8,7 +8,7 @@
 <div class="container-fluid p-3 mb-5">
     <div class="row text-center">
         <h1>Condition Reports</h1>
-        <h6>Written by climbers for climbers.</h6>
+        <h4>Written by climbers for climbers.</h4>
     </div>
 </div>
 
@@ -18,11 +18,10 @@
 
     <!-- Filters -->
 
-    <div id="filters"
-        class="d-flex flex-column-reverse flex-sm-row justify-content-sm-between pb-2 pb-sm-4 border-bottom border-3">
+    <div id="filters" class="d-flex flex-column-reverse flex-sm-row justify-content-sm-between">
         <div id="filter-forms"
-            class="col-12 col-sm-6 col-md-8 d-flex flex-row justify-content-evenly mt-3 mt-sm-0 justify-content-sm-start text-start d-flex p-0">
-            <div class="d-flex align-items-end me-sm-2 me-sm-2">
+            class="col-12 col-sm-6 col-md-8 d-flex justify-content-between justify-content-sm-start mt-2 mt-sm-0 text-start d-flex p-0">
+            <div class="d-flex align-items-end me-2">
                 <form id="gradeFilterForm" method="get">
                     <label for="grade">Grade Filter</label>
                     <select class="filter" name="grade" onchange="this.form.submit()">
@@ -35,7 +34,7 @@
                     </select>
                 </form>
             </div>
-            <div class="d-flex align-items-end">
+            <div class="d-flex align-items-end me-2">
                 <form id="filterForm" method="get">
                     <label for="activity">Activity Filter</label>
                     <select class="filter" name="activity" onchange="this.form.submit()">
@@ -52,14 +51,23 @@
                     </select>
                 </form>
             </div>
+            <div class="d-flex justify-content-end align-items-end d-sm-none">
+                <p class="sort p-0 m-0 text-end text-secondary">Activity Date <i class="fa-solid fa-sort-down"></i></p>
+            </div>
         </div>
-        <div class="col-12 col-sm-6 col-md-4 d-flex align-items-end justify-content-end ms-sm-2 p-0">
+
+        <div class="col-12 col-sm-6 col-md-4 d-flex align-items-end justify-content-end pb-2 p-sm-0">
             {% if user.is_authenticated %}
             <a href="{% url 'create_report' %}" class="btn btn-success col-12">Create New Report</a>
             {% else %}
-            <a href="{% url 'account_login' %}" class="btn btn-success col-12">Login To Create Reports</a>
+            <a id="reports-list-create-btn" href="{% url 'account_login' %}" class="btn btn-success col-12">Login To
+                Create Reports</a>
             {% endif %}
         </div>
+    </div>
+    <div class="col-12 d-flex justify-content-end align-items-end pb-2 pt-2 border-bottom border-3">
+        <p class="sort d-none d-sm-block p-0 m-0 text-end text-secondary">Sorted By: Activity Date <i
+                class="fa-solid fa-sort-down"></i></p>
     </div>
 
     <!-- List Key -->
@@ -82,7 +90,8 @@
     <div class="row mb-3">
 
         {% for report in report_list %}
-        <a href="{% url 'report_details' report.pk  %}" class="report-list-item d-flex justify-content-evenly p-1 btn btn-light mb-2">
+        <a href="{% url 'report_details' report.pk  %}"
+            class="report-list-item d-flex justify-content-evenly p-1 btn btn-light mb-2">
 
             <!-- Images -->
             <div class="list_image d-sm-flex col-3 align-items-center justify-content-center">
