Update to no images within report details

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -541,6 +541,10 @@ label {
         font-size: 0.75em;
     }
 
+    #map {
+        display: none;
+    }
+
     /* Create Report */
 
     #create_form,
