--- a/templates/account.html
+++ b/templates/account.html
@@ -94,7 +94,7 @@
 
 <!-- Reports -->
 
-<div class="container-fluid col-12 col-md-9 mb-4">
+<div class="container-fluid col-12 col-lg-9 mb-4 pt-2 pe-0 ps-0 p-sm-2">
     <div class="row flex-column-reverse flex-md-row pb-2 m-2 border-bottom border-3">
         <div class="col-md-8 d-flex justify-content-between align-items-end p-0">
             <div class="p-0">
@@ -113,14 +113,14 @@
     </div>
 
     <!-- List Key -->
-    <div class="list-key row justify-content-between justify-content-sm-evenly text-center text-muted pt-3 m-0">
+    <div class="list-key row justify-content-between justify-content-sm-evenly text-center text-muted pt-2 ps-0 pe-0 p-sm-2 m-0">
         <div class="camera col-2">
             <i class="fa-solid fa-camera"></i>
         </div>
         <div class="col-3">
             <p><i class="fa-solid fa-route"></i></p>
         </div>
-        <div class="col-2">
+        <div class="col-1 p-0">
             <p><i class="fa-solid fa-cloud-sun-rain"></i></p>
         </div>
         <div class="col-2">
@@ -128,6 +128,9 @@
         </div>
         <div class="col-2">
             <p><i class="fa-solid fa-calendar-days"></i></p>
+        </div>
+        <div class="col-1 me-2 me-sm-0">
+            <i class="fa-solid fa-gear"></i>
         </div>
     </div>
 
@@ -157,7 +160,7 @@
             <p>{{ report.activity_category|title }}</p>
         </div>
         <!-- Overall Conditions -->
-        <div class="d-flex flex-column align-items-center justify-content-center col-2">
+        <div class="d-flex flex-column align-items-center justify-content-center col-1">
             {% if report.overall_conditions == "perfect" %}
             <i class="fa-solid fa-star"></i>
             {% elif report.overall_conditions == "good" %}
@@ -167,19 +170,21 @@
             {% else %}
             <i class="fa-solid fa-circle-xmark"></i>
             {% endif %}
-            {{ report.overall_conditions }}
+            {{ report.overall_conditions|title }}
         </div>
         <!-- Status -->
-        <div class="d-flex flex-column align-items-center justify-content-center col-sm-2">
+        <div class="d-flex flex-column align-items-center justify-content-center col-2">
             <form class="text-center" action="{% url 'toggle_report' report.id %}" method="post">
                 {% csrf_token %}
                 {% if report.status == 0 %}
-                <a class="status" type="submit" name="action" value="toggle" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Click to publish report.">
+                <a class="status" type="submit" name="action" value="toggle" data-bs-toggle="tooltip"
+                    data-bs-placement="top" data-bs-title="Click to publish report.">
                     <i class="fa-regular fa-share-from-square d-block"></i>
                     {{ report.status|display_status|title }}
                 </a>
                 {% else %}
-                <a class="status" type="submit" name="action" value="toggle" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Click to return to draft.">
+                <a class="status" type="submit" name="action" value="toggle" data-bs-toggle="tooltip"
+                    data-bs-placement="top" data-bs-title="Click to return to draft.">
                     <i class="fa-solid fa-share-from-square d-block"></i>
                     {{ report.status|display_status|title }}
                 </a>
@@ -188,11 +193,12 @@
         </div>
         <!-- Author Activity Date -->
         <div class="col-2 d-flex flex-column justify-content-center align-items-center">
-            <p class="text-center">{{ report.start_date }}</p>
-            <a href="{% url 'edit_report' pk=report.pk %}" class="ud-btn text-primary">Edit</a>
-            <a href="#" class="ud-btn text-danger" data-bs-toggle="modal" data-bs-target="#deleteReportModal"
-                data-report-id="{{ report.pk }}">
-                Delete
+            <p class="text-center mb-0">{{ report.start_date }}</p>
+        </div>
+        <div class="col-1 d-flex flex-column align-items-center justify-content-evenly">
+            <a href="{% url 'edit_report' pk=report.pk %}" class="text-primary" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Click to edit report."><i class="fa-solid fa-pencil"></i></a>
+            <a href="#" class="text-danger" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Click to delete report.">
+                <i class="fa-solid fa-trash" data-bs-toggle="modal" data-bs-target="#deleteReportModal" data-report-id="{{ report.pk }}"></i>
             </a>
         </div>
 
